# terminus

./: .gitignore  Cargo.toml  LICENSE  Notice.md  README.md  clean_tuntap.sh  setup_tuntap.sh
base/: Cargo.toml
base/src/: lib.rs
base/src/insn/: macros.rs  mod.rs
examples/linux/: main.rs
global/: Cargo.toml
global/src/: lib.rs
macros/: Cargo.toml
macros/src/: csr.rs  insn.rs  lib.rs
macros/src/terminus_insn/: init_decoder.rs  init_instruction.rs  init_simplemap.rs  init_treemap.rs  mod.rs
proc_macros/: Cargo.toml
proc_macros/src/: csr.rs  insn.rs  lib.rs
proc_macros/src/csr/: csr_map.rs  define_csr.rs  mod.rs
src/: elf.rs  execption.rs  global.rs  lib.rs  prelude.rs  system.rs  test.rs
src/cosim/: core.rs  mod.rs  rapi.rs  test.rs
src/decode/: mod.rs  simple_insn_map.rs  tree_insn_map.rs
src/devices/: bus.rs  clint.rs  display.rs  htif.rs  mod.rs  plic.rs  simple_fb.rs  virtio_blk.rs  virtio_console.rs  virtio_input.rs  virtio_net.rs
src/extentions/: a.rs  c.rs  d.rs  f.rs  i.rs  m.rs  mod.rs  v.rs
src/extentions/i/: csrs.rs  insns.rs  mod.rs
src/insn/: insn_maps.rs  macors.rs  macros.rs  mod.rs  test.rs  tree_insn_map.rs
src/machine/: mod.rs
src/processor/: bus.rs  csr.rs  fetcher.rs  insn.rs  load_store.rs  mmu.rs  mod.rs  test.rs  trap.rs
src/processor/decode/: mod.rs  simple_insn_map.rs  tree_insn_map.rs
src/processor/extensions/: a.rs  c.rs  d.rs  f.rs  m.rs  mod.rs  u.rs  v.rs
src/processor/extensions/a/: insns.rs  mod.rs
src/processor/extensions/c/: insns.rs  mod.rs
src/processor/extensions/d/: insns.rs  mod.rs
src/processor/extensions/f/: csrs.rs  float.rs  insns.rs  mod.rs
src/processor/extensions/i/: csrs.rs  insns.rs  mod.rs
src/processor/extensions/m/: insns.rs  mod.rs
src/processor/extensions/s/: csrs.rs  insns.rs  mod.rs
src/processor/extensions/u/: mod.rs
src/processor/extentions/: a.rs  c.rs  d.rs  f.rs  m.rs  v.rs
src/processor/extentions/i/: insns.rs  mod.rs
src/processor/mmu/: mod.rs  pmp.rs  pte.rs  tlb.rs
src/processor/privilege/: m_priv.rs  mod.rs  s_priv.rs  u_priv.rs
src/processor/privilege/m/: csrs.rs  mod.rs
src/processor/privilege/s/: csrs.rs  mod.rs
src/processor/privilege/u/: csrs.rs  mod.rs
src/system/: elf.rs  fdt.rs  mod.rs
top_tests/: decode.rs  decode_bench.rs  htif_test.rs  load_elf.rs  riscv_test.rs  riscv_tests.rs  soft_float.rs
top_tests/elf/: rv32mi-p-breakpoint  rv32mi-p-csr  rv32mi-p-illegal  rv32mi-p-ma_addr  rv32mi-p-ma_fetch  rv32mi-p-mcsr  rv32mi-p-sbreak  rv32mi-p-scall  rv32mi-p-shamt  rv32si-p-csr  rv32si-p-dirty  rv32si-p-ma_fetch  rv32si-p-sbreak  rv32si-p-scall  rv32si-p-wfi  rv32ua-p-amoadd_w  rv32ua-p-amoand_w  rv32ua-p-amomax_w  rv32ua-p-amomaxu_w  rv32ua-p-amomin_w  rv32ua-p-amominu_w  rv32ua-p-amoor_w  rv32ua-p-amoswap_w  rv32ua-p-amoxor_w  rv32ua-p-lrsc  rv32ua-pm-lrsc  rv32ua-v-amoadd_w  rv32ua-v-amoand_w  rv32ua-v-amomax_w  rv32ua-v-amomaxu_w  rv32ua-v-amomin_w  rv32ua-v-amominu_w  rv32ua-v-amoor_w  rv32ua-v-amoswap_w  rv32ua-v-amoxor_w  rv32ua-v-lrsc  rv32uc-p-rvc  rv32uc-v-rvc  rv32ud-p-fadd  rv32ud-p-fclass  (+454 more)
top_tests/load_elf/: load_elf.rs
