[package]
name = "terminus"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminus-spaceport={git = "https://github.com/shady831213/terminus_spaceport"}
terminus-global = { path = "global" }
terminus-macros={ path = "macros" }
terminus-proc-macros={ path = "proc_macros" }
linkme = "0.1"
xmas-elf = "0.7.0"
num_enum = "0.4.3"
num = "0.2.1"
simple-soft-float = "0.1.0"

[workspace]
members = ["global","macros","proc_macros"]

[[test]]
name = "soft_float"
path = "top_tests/soft_float.rs"

[[example]]
name = "riscv_tests"
path = "top_tests/riscv_tests.rs"

[[example]]
name = "htif_test"
path = "top_tests/htif_test.rs"