[package]
name = "terminus"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "terminus"
crate-type = ["rlib","staticlib", "cdylib"]

[dependencies]
terminus-global = { path = "global" }
terminus-spaceport={git = "https://github.com/shady831213/terminus_spaceport"}
terminus-vault={git = "https://github.com/shady831213/terminus_vault"}

linkme = "0.1"
xmas-elf = "0.7.0"
num_enum = "0.4.3"
num = "0.2.1"
simple-soft-float = "0.1.0"
clap = "2"

[dev-dependencies]
device_tree = "1.1.0"

[workspace]
members = ["global"]

[[example]]
name = "riscv_tests"
path = "top_tests/riscv_tests.rs"

[[example]]
name = "htif_test"
path = "top_tests/htif_test.rs"

[[bench]]
name = "decode_bench"
path = "top_tests/decode_bench.rs"

[features]
no-inline = []
sdl=["terminus-spaceport/sdl2"]